--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
   <header id="header" class="header-tops">
     <div class="container">
 
-      <h1><a href="index.html">Emily Jones</a></h1>
+      <h1><a href="index.html">Ritesh Nanda</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>I'm a passionate <span>graphic designer</span> from New York</h2>
+      <h2> Master in the art called <span> Technology </span> from India</h2>
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
@@ -83,32 +83,31 @@
           <img src="assets/img/me.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>UI/UX &amp; Graphic Designer</h3>
+          <h3> Developer of Artificial Intelligence Systems</h3>
           <p class="font-italic">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua.
+              To develop state-of-art artificial intelligence machines that can help humankind performing extra ordinary tasks
+              and achieve greater heights in the field of engineering, space, exploration and defence.
           </p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 1 May 1995</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.example.com</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +123 456 7890</li>
-                <li><i class="icofont-rounded-right"></i> <strong>City:</strong> City : New York, USA</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 28th March, 1998 </li>
+                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +917008335110 </li>
+                <li><i class="icofont-rounded-right"></i> <strong>Country:</strong> India </li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 30</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Master</li>
-                <li><i class="icofont-rounded-right"></i> <strong>PhEmailone:</strong> email@example.com</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelors </li>
+                <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> riteshnanda1998@gmail.com </li>
                 <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Available</li>
               </ul>
             </div>
           </div>
           <p>
-            Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-            Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
+              Experienced Member Technical with a demonstrated history of working in the program development industry.
+              Skilled in Satellite Launch Vehicle Technology, Industrial Tools, CAD, CAE, CAM, Artificial Intelligence, Machine Learning, Deep Learning.
+              Strong engineering professional with a Bachelor of Technology - BTech focused in Mechanical Engineering from Veer Surendra Sai University Of Technology ( Formerly UCE ), Burla.
           </p>
         </div>
       </div>
