Project Defination Insertion

--- a/index.html
+++ b/index.html
@@ -447,53 +447,79 @@
       </div>
 
       <div class="row">
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-          <div class="icon-box">
-            <div class="icon"><i class="bx bxl-dribbble"></i></div>
-            <h4><a href="">Lorem Ipsum</a></h4>
-            <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+              <div class="icon-box">
+                  <div class="icon"><i class="bx bxl-dribbble"></i></div>
+                  <h4><a href="">VSLV</a></h4>
+                  <p>
+                  India’s first undergraduate and technical student body to design a satellite launch vehicle that holds the LIMCA and INDIA book of records.
+                  The main purpose of the project is to launch a pico-sat to monitor the slit concentration and cracks in India’s Longest Hirakud Dam.
+                  The project is felicitated by the Government of India and also been supervised by ISRO.
+                  </p>
+              </div>
           </div>
-        </div>
 
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
-          <div class="icon-box">
-            <div class="icon"><i class="bx bx-file"></i></div>
-            <h4><a href="">Sed ut perspiciatis</a></h4>
-            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
+              <div class="icon-box">
+                  <div class="icon"><i class="bx bx-file"></i></div>
+                  <h4><a href="">Soldier Strap </a></h4>
+                  <p>
+                  Communication is a vital parameter for soldiers. But the present communication system used among soldiers
+                  i.e. walkie-talkie can easily be hackable as it uses frequency for operation. Our soldier strap creates a mesh network and encrypts
+                  the signal that makes it unbreachable. It also features a concrete connection with the instruction headquarters to ensure
+                  quick real-time information from each army unit.
+                  </p>
+              </div>
           </div>
-        </div>
 
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
-          <div class="icon-box">
-            <div class="icon"><i class="bx bx-tachometer"></i></div>
-            <h4><a href="">Magni Dolores</a></h4>
-            <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
+              <div class="icon-box">
+                  <div class="icon"><i class="bx bx-arch"></i></div>
+                  <h4><a href="">Variable Intensity Light</a></h4>
+                  <p>
+                  It’s a LED bulb that uses the colour temperature property of light to mix the warm and cool white light that has the advantages
+                  of both Sodium light and normal LED bulb. The IoT ensures the control of the light from anywhere through the design mobile app.
+                  The AI ensures the automatic adjustment of intensity based on the surrounding light and presence of the number of people
+                  or according to the job done by the person(s).
+                  </p>
+              </div>
           </div>
-        </div>
 
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
-          <div class="icon-box">
-            <div class="icon"><i class="bx bx-world"></i></div>
-            <h4><a href="">Nemo Enim</a></h4>
-            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
+              <div class="icon-box">
+                  <div class="icon"><i class="bx bx-tachometer"></i></div>
+                  <h4><a href="">Text sentiment analysis </a></h4>
+                  <p>
+                  A computer program that can analyse the user sentiments through the text input.
+                  Developed using MATLAB, exported as an engine for its implementation in python for real world application.
+                  </p>
+              </div>
           </div>
-        </div>
 
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
-          <div class="icon-box">
-            <div class="icon"><i class="bx bx-slideshow"></i></div>
-            <h4><a href="">Dele cardo</a></h4>
-            <p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
+              <div class="icon-box">
+                  <div class="icon"><i class="bx bx-world"></i></div>
+                  <h4><a href="">Solar Miura Fold Panels</a></h4>
+                  <p>
+                  Different models solar panel designed, configured with robotic movement such that the panels can adjust their configurations to get the maximum intensity
+                  of sunlight using the different configurations. Our model has achieved, 30% more solar power generation than existing model
+                  and the design also reduced the area occupied by the panel by 10%.
+                  </p>
+              </div>
           </div>
-        </div>
 
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
-          <div class="icon-box">
-            <div class="icon"><i class="bx bx-arch"></i></div>
-            <h4><a href="">Divera don</a></h4>
-            <p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
+              <div class="icon-box">
+                  <div class="icon"><i class="bx bx-slideshow"></i></div>
+                  <h4><a href="">Cold Storage</a></h4>
+                  <p>
+                  An affordable, scalable, easily transportable and non-electric storage unit which was developed for the farmers with a purpose of storing agricultural products
+                  in hot and humid climate conditions to preserve the freshness of their crops. The product uses the natural mechanism of evaporation like in earthen pots,
+                  keeping the items inside cool and fresh for a longer period of time.
+                  The lab test conducted under certain atmospheric conditions have achieved the lowest temperature of 14oC.
+                  </p>
+              </div>
           </div>
-        </div>
 
       </div>
 
