style, colour for projects and accolades

--- a/index.html
+++ b/index.html
@@ -418,8 +418,7 @@
       <div class="row">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
               <div class="icon-box">
-                  <div class="icon"><i class="bx bxl-dribbble"></i></div>
-                  <h4><a href="">VSLV</a></h4>
+                  <h4 style="color: RGB(17, 232, 13)"> VSLV </h4> 
                   <p>
                   India’s first undergraduate and technical student body to design a satellite launch vehicle that holds the LIMCA and INDIA book of records.
                   The main purpose of the project is to launch a pico-sat to monitor the slit concentration and cracks in India’s Longest Hirakud Dam.
@@ -430,8 +429,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
               <div class="icon-box">
-                  <div class="icon"><i class="bx bx-file"></i></div>
-                  <h4><a href="">Soldier Strap </a></h4>
+                  <h4 style="color: RGB(17, 232, 13)"> Soldier Strap </h4>
                   <p>
                   Communication is a vital parameter for soldiers. But the present communication system used among soldiers
                   i.e. walkie-talkie can easily be hackable as it uses frequency for operation. Our soldier strap creates a mesh network and encrypts
@@ -443,21 +441,19 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
               <div class="icon-box">
-                  <div class="icon"><i class="bx bx-arch"></i></div>
-                  <h4><a href="">Variable Intensity Light</a></h4>
+                  <h4 style="color: RGB(17, 232, 13)"> Variable Intensity Light </h4>
                   <p>
-                  It’s a LED bulb that uses the colour temperature property of light to mix the warm and cool white light that has the advantages
-                  of both Sodium light and normal LED bulb. The IoT ensures the control of the light from anywhere through the design mobile app.
-                  The AI ensures the automatic adjustment of intensity based on the surrounding light and presence of the number of people
-                  or according to the job done by the person(s).
+                      It’s a LED bulb that uses the colour temperature property of light to mix the warm and cool white light that has the advantages
+                      of both Sodium light and normal LED bulb. The IoT ensures the control of the light from anywhere through the design mobile app.
+                      The AI ensures the automatic adjustment of intensity based on the surrounding light and presence of the number of people
+                      or according to the job done by the person(s).
                   </p>
               </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
               <div class="icon-box">
-                  <div class="icon"><i class="bx bx-tachometer"></i></div>
-                  <h4><a href="">Text Sentiment Analysis </a></h4>
+                  <h4 style="color: RGB(17, 232, 13)"> Text Sentiment Analysis </h4>
                   <p>
                   A computer program that can analyse the user sentiments through the text input.
                   Developed using MATLAB, exported as an engine for its implementation in python for real world application.
@@ -467,8 +463,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
               <div class="icon-box">
-                  <div class="icon"><i class="bx bx-world"></i></div>
-                  <h4><a href="">Solar Miura Fold Panels</a></h4>
+                  <h4 style="color: RGB(17, 232, 13)"> Solar Miura Fold Panels </h4>
                   <p>
                   Different models solar panel designed, configured with robotic movement such that the panels can adjust their configurations to get the maximum intensity
                   of sunlight using the different configurations. Our model has achieved, 30% more solar power generation than existing model
@@ -479,8 +474,8 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
               <div class="icon-box">
-                  <div class="icon"><i class="bx bx-slideshow"></i></div>
-                  <h4><a href="">Cold Storage</a></h4>
+          
+                  <h4 style="color: RGB(17, 232, 13)"> Cold Storage </h4>
                   <p>
                       An affordable, scalable, easily transportable and non-electric storage unit which was developed for the farmers with a purpose of storing agricultural products
                       in hot and humid climate conditions to preserve the freshness of their crops. The product uses the natural mechanism of evaporation like in earthen pots,
@@ -520,7 +515,7 @@
           <div class="accolades-wrap">
             <img src="assets/img/accolades/createch" class="img-fluid" alt="">
             <div class="accolades-info">
-                <h4> L&#38T Createch-2020</h4>
+                <h4 style="        color: RGB(242, 131, 38)"> L&#38T Createch-2020</h4>
                 <p>2nd Runners up in the hackathon Createch-2020 organized by Larson and Toubro for the product Smart Variable Intensity Light.</p>
             </div>
           </div>
@@ -530,7 +525,7 @@
           <div class="portfolio-wrap">
             <img src="assets/img/accolades/crucible" class="img-fluid" alt="">
             <div class="accolades-info">
-              <h4>Tata Crucible-2020</h4>
+              <h4 style="        color: RGB(242, 131, 38)">Tata Crucible-2020</h4>
               <p>Finalist in Tata Crucible–2020 organized by Tata for the development of Efficient Design and Configuration of Solar Panels for small scale use.</p>
             </div>
           </div>
@@ -540,7 +535,7 @@
           <div class="accolades-wrap">
             <img src="assets/img/accolades/makermela" class="img-fluid" alt="">
             <div class="accolades-info">
-              <h4>MakerMela-2020</h4>
+              <h4 style="        color: RGB(242, 131, 38)">MakerMela-2020</h4>
               <p>The showcase of our project Sentiment Analyzer among Top 20 makers in MakerMela-2020 organized by RIIDL.</p>
             </div>
           </div>
