--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <header id="header" class="header-tops">
     <div class="container">
 
-      <h1><a href="index.html">Ritesh Nanda</a></h1>
+      <h1> Ritesh Nanda </h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
       <h2> Master in the art called <span> Technology </span> from India</h2>
@@ -522,7 +522,7 @@
         </div>
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-          <div class="portfolio-wrap">
+          <div class="accolades-wrap">
             <img src="assets/img/accolades/crucible" class="img-fluid" alt="">
             <div class="accolades-info">
               <h4 style="        color: RGB(242, 131, 38)">Tata Crucible-2020</h4>
