--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
               <div class="icon-box">
                   <h4 style="color: RGB(17, 232, 13)"> MESAIID (Manet based Encrypted Statistical Information Interchange Devices) </h4>
-                  <p> This paper deals with the design of a soldier strap using a MANET-type communication system. The strap will create a encrypt mesh-network inter-connecting each soldiers. The strap is can authenticate each soldier with fingerprint and retina identification. It is capable of detecting the GPS location of the soldier besides monitoring and recording maximum number of vital body parameter, providing SOS facility, support for location timeline, having sufficient battery life. All these parameters will be displayed to the soldier with a mini-LED display attached. The straps will feature IOT and will remain connected to the army headquarters and thus eliminating the gap of communication between the headquarters and a soldier. The strap can access public network only when no node is available in immediate vicinity and only in case of extreme emergency upon the authentication and discretion of the soldier.
+                  <p> Design of a soldier strap using a MANET-type communication system. The strap will create a encrypt mesh-network inter-connecting each soldiers. It is capable of detecting the GPS location of the soldier besides monitoring and recording maximum number of vital body parameter, providing SOS facility, support for location timeline, having sufficient battery life.
                   </p>
               </div>
           </div>
