--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
       <div class="row">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
               <div class="icon-box">
-                  <h4 style="color: RGB(17, 232, 13)"> VSLV </h4>  
+                  <h4 style="color: RGB(17, 232, 13)"> VSLV (VSSUT Satellite Launch Vehicle) </h4>  
                   <p>
                   India’s first undergraduate and technical student body to design a satellite launch vehicle that holds the LIMCA and INDIA book of records. The main purpose of the project is to launch a pico-sat to monitor the slit concentration and cracks in India’s Longest Hirakud Dam. The project is felicitated by the Government of India and also been supervised by ISRO.
                   </p>
