new projects added

--- a/index.html
+++ b/index.html
@@ -493,6 +493,22 @@
                   </p>
               </div>
           </div>
+
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
+              <div class="icon-box">
+                  <h4 style="color: RGB(17, 232, 13)"> Kalam Kavach </h4>
+                  <p> A well-equipped ballistic vest or bullet-resistant vest reducing a considerable amount of risk posed by the soldiers. To develop a ballistic vest consisting of several stacks of four subsequent coverings with unique innermost material, the shear thickening fluid (STF). The other materials that we distribute the force over a large surface area, consequently reducing the impact of the bullet. Our newly designed vest efficiently serve towards the absorption of the impact and reduction of penetration to the torso along with the light-weight purpose.
+                  </p>
+              </div>
+          </div>
+          
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
+              <div class="icon-box">
+                  <h4 style="color: RGB(17, 232, 13)"> EAIS-(Exposing ambush and interconnected System) </h4>
+                  <p> Soldiers have faced tremendous problems through the millennia. Because everyone faces a problem in seeing properly during the night. Our team has lit upon an idea where finding enemies will be smooth and effortless without harming his crew members. Our helmet (EAIS) which would locate the Enemies and help to distinguish between his crewmates. The other aim of this project is to know the locations of the military personnel and the enemies. So additional military personnel can be sent by the Head officers for back up.
+                  </p>
+              </div>
+          </div>
           
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
               <div class="icon-box">
